@@ -31,13 +31,14 @@
 // (placed here since homuncs are more or less like pet mobs)
 // Activates various homunc-related 'quirks' that makes them behave unlike
 //  normal characters.
-// 0x001: They can't be targetted by support skills (except for their master)
-// 0x002: They are inmune to land skills.
+// 0x001: Can't be targetted by support skills (except for their master)
+// 0x002: Immunity to land skills.
 // 0x004: Mobs will always go after them instead of players until attacked.
-// 0x008: They copy their master's speed on spawn/map-change
+// 0x008: Copy their master's speed on spawn/map-change
 // 0x010: They display luk/3+1 instead of their actual critical in the
 //        stat window (by default they don't crit)
 // 0x020: Their Min-Matk is always the same as their max
+// 0x040: Skill re-use delay is reset when they are vaporized.
 hom_setting: 0xFFFF
 
 // The rate a homunculus will get friendly by feeding it. (Note 2)
